1. refactoring 2. update integration with jwt service
