# src/main/java/org/online/queue/backend_java/security/models/dto/JwtUpdateRequest.java
@@ -3,6 +3,7 @@ package org.online.queue.backend_java.security.models.dto;
 import com.fasterxml.jackson.annotation.JsonProperty;
 
 public record JwtUpdateRequest(
-        @JsonProperty("token") String refreshToken
+        @JsonProperty("token") String refreshToken,
+        @JsonProperty("deviceId") String deviceId
 ) {
 }
